# todoguardian

./: .flake8  .gitignore  Dockerfile  LICENSE  package-lock.json  pyproject.toml  pytest.ini  tailwind.config.js
.github/workflows/: django.yml
static/src/: input.css  output.css
templates/: _base.html  _base_new.html
todo/: settings.py  urls.py
todoguardian/: admin.py  apps.py  date_functions.py  exceptions.py  models.py  recurrence_functions.py  tests.py  urls.py  views.py
todoguardian/functions/: date.py  recurrence.py
todoguardian/migrations/: 0001_initial.py  0002_todo_completed_todo_completion_date_todo_created_and_more.py  0003_alter_todo_completed_alter_todo_priority_and_more.py  0004_alter_todo_recurrence_interval_number.py  0005_alter_todo_recurrence_interval_number.py  0006_todoold_remove_todo_completed_and_more.py  0007_todo_completed_todo_completion_date_todo_created_and_more.py  0008_remove_todo_completed.py  0009_delete_todoold.py  0010_todo_completed.py  0011_remove_todo_completed_todo__completed.py  0012_alter_todo_recurrence.py  0013_project_alter_todo_recurrence.py  0014_todo_projects.py  0015_alter_todo_projects.py  0016_context_todo_contexts.py  0017_alter_todo_start_date.py  0018_annotation.py  0019_alter_annotation_todo.py  0020_context_slug_project_slug.py  0021_remove_context_slug_remove_project_slug.py  0022_alter_todo_priority.py
todoguardian/templates/: contexts.html  dashboard.html  dashboard2.html  index.html  projects.html
todoguardian/templatetags/: todo_extras.py
todoguardian/tests/: test_date_functions.py  test_models.py  (+1 more)
(+3 files in other folders)
